--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,8 @@
 			<artifactId>spring-boot-starter-web-services</artifactId>
 		</dependency>
 
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -70,6 +72,10 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+	 <dependency>
+	  <groupId>org.springframework.boot</groupId>
+	  <artifactId>spring-boot-starter-data-jpa</artifactId>
+	 </dependency>
 	</dependencies>
 
 	<build>
